feat: Locals file, decouple tags, cidrsubnet function

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,12 @@
 # Local .terraform directories
 **/.terraform/*
+.terraform.lock.hcl
+
 
 # .tfstate files
 *.tfstate
 *.tfstate.*
+*.tfcars.*
 
 # Crash log files
 crash.log
